import { BaseClient, type ClientOptions } from "./BaseClient.ts";
import type { ClientTxResult } from "./types.ts";

export interface RecipientKey {
  address: string;
  fingerprint: string;
  publicKey: Uint8Array;
  algorithm: string;
  createdAt: number;
  expiresAt?: number;
}

export interface EncryptedEnvelope {
  recipientFingerprints: string[];
  algorithm: string;
  ciphertext: Uint8Array;
  nonces: Uint8Array[];
  senderPubKey: Uint8Array;
  senderSignature: Uint8Array;
}

export interface EncryptionClientDeps {
  sdk: unknown;
}

/**
 * Client for Encryption module (key management and envelope validation)
 */
export class EncryptionClient extends BaseClient {
  private sdk: unknown;

  constructor(deps: EncryptionClientDeps, options?: ClientOptions) {
    super(options);
    this.sdk = deps.sdk;
  }

  /**
   * Get recipient keys for an address
   */
  async getRecipientKey(_address: string): Promise<RecipientKey[]> {
    try {
      throw new Error("Encryption module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "getRecipientKey");
    }
  }

  /**
   * Get a specific key by fingerprint
   */
  async getKeyByFingerprint(_fingerprint: string): Promise<RecipientKey | null> {
    try {
      throw new Error("Encryption module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "getKeyByFingerprint");
    }
  }

  /**
   * Validate an encrypted envelope
   */
  async validateEnvelope(_envelope: EncryptedEnvelope): Promise<{
    valid: boolean;
    error?: string;
    recipientCount: number;
    algorithm: string;
  }> {
    try {
      throw new Error("Encryption module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "validateEnvelope");
    }
  }

  /**
   * Register a new encryption key
   */
  async registerKey(_params: {
    publicKey: Uint8Array;
    algorithm: string;
    expiresAt?: number;
  }): Promise<ClientTxResult & { fingerprint: string }> {
    try {
      throw new Error("Encryption module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "registerKey");
    }
  }

  /**
   * Revoke an encryption key
   */
  async revokeKey(_fingerprint: string): Promise<ClientTxResult> {
    try {
      throw new Error("Encryption module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "revokeKey");
    }
  }
}
